--- a/powerline/config.json
+++ b/powerline/config.json
@@ -1,6 +1,9 @@
 {
 	"common": {
-		"term_truecolor": false
+		"term_truecolor": false,
+		"paths": [
+			"~/dotfiles/powerline/segments"
+		]
 	},
 	"ext": {
 		"ipython": {
@@ -18,7 +21,7 @@
 		},
 		"shell": {
 			"colorscheme": "default",
-			"theme": "default_leftonly",
+			"theme": "default",
 			"local_themes": {
 				"continuation": "continuation",
 				"select": "select"
@@ -46,8 +49,7 @@
 		},
 		"wm": {
 			"colorscheme": "default",
-			"theme": "default",
-			"update_interval": 2
+			"theme": "default"
 		}
 	}
 }
