powerline tweaks for centos 7

--- a/powerline/config.json
+++ b/powerline/config.json
@@ -3,7 +3,9 @@
 		"term_truecolor": false,
 		"paths": [
 			"~/dotfiles/powerline/segments"
-		]
+		],
+		"log_file": "~/powerlog",
+		"log_level": "DEBUG"
 	},
 	"ext": {
 		"ipython": {
