--- a/i3/config
+++ b/i3/config
@@ -187,5 +187,12 @@ exec subl
 exec_always feh --bg-fill ~/Pictures/wallpaper.jpg
 
 
+bindsym $mod+c exec google-chrome-stable 
+
+
 # Customize colors :)
 
+# Audio shortcuts
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
