--- a/i3status/config
+++ b/i3status/config
@@ -21,13 +21,27 @@ order += "cpu_temperature 0"
 order += "load"
 order += "disk /"
 order += "volume master"
-order += "ethernet eno1"
+order += "wireless wlp3s0"
+order += "battery 0"
 order += "tztime local"
 
-ethernet eno1 {
-    #if you use %speed, i3status requires root privileges
-    format_up = "%ip (%speed)"
+wireless wlp3s0 {
+    format_up = " %essid %ip"
     format_down = ""
+}
+
+battery 0 {
+    format = "%status %percentage %remaining"
+    format_down = ""
+    last_full_capacity = true
+    integer_battery_capacity = true
+    low_threshold = 11
+    threshold_type = percentage
+    hide_seconds = true
+    status_chr = " "
+    status_bat = " "
+    status_unk = " "
+    status_full = " "
 }
 
 run_watch DHCP {
